# MikanXR

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProjectFiles_X64.bat  GenerateProjectFiles_X64_VS2019.bat  GenerateProjectFiles_X64_VS2022.bat  GenerateRefurekuFiles.bat  InitialSetup_x64.bat  LICENSE  README.md
bindings/csharp/: .gitignore  CMakeLists.txt  CSharpCodeGenConfig.json  MikanAPI.cs  MikanCoreConstants.cs  MikanCoreNative.cs  MikanCoreTypes.cs  MikanEventManager.cs  MikanEventTypes.cs  MikanMathTypes.cs  MikanRenderTargetAPI.cs  MikanRequestManager.cs  MikanResponseFuture.cs  MikanScriptAPI.cs  MikanScriptTypes.cs  MikanSpatialAnchorAPI.cs  MikanSpatialAnchorTypes.cs  MikanStencilAPI.cs  MikanStencilTypes.cs  MikanVRDeviceAPI.cs  MikanVRDeviceTypes.cs  MikanVideoSourceAPI.cs  MikanVideoSourceTypes.cs  packages.config.template
plugins/MikanGStreamer/: CMakeLists.txt
src/: CMakeLists.txt  RefurekuSettings.toml
src/AppCore/: App.cpp  App.h  EntryPoint.cpp  FrameTimer.cpp  FrameTimer.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  MikanServer.cpp  MikanServer.h  NamedValueTable.h  ProfileConfig.cpp  ProfileConfig.h  ProfileConfigConstants.cpp  ProfileConfigConstants.h  Version.h
src/AppStages/: AppStage.cpp  AppStage.h  AppStage_AlignmentCalibration.cpp  AppStage_CalibrationPatternSettings.cpp  AppStage_CalibrationPatternSettings.h  AppStage_CameraSettings.cpp  AppStage_CameraSettings.h  AppStage_Compositor.cpp  AppStage_FileBrowser.cpp  AppStage_FileBrowser.h  AppStage_MainMenu.cpp  AppStage_MainMenu.h  AppStage_MonoLensCalibration.cpp  AppStage_MonoLensCalibration.h  AppStage_SpatialAnchors.cpp  AppStage_SpatialAnchors.h  AppStage_VRDeviceSettings.cpp  AppStage_VRDeviceSettings.h
src/Asset/: AssetFwd.h  AssetReference.cpp  AssetReference.h  MaterialAssetReference.cpp  MaterialAssetReference.h  ModelAssetReference.cpp  ModelAssetReference.h  NodeGraphAssetReference.cpp  NodeGraphAssetReference.h  TextureAssetReference.cpp  TextureAssetReference.h
src/Calibration/: AnchorTriangulator.cpp  AnchorTriangulator.h  ArucoMarkerPoseSampler.cpp  ArucoMarkerPoseSampler.h  CalibrationPatternFinder.cpp  CalibrationPatternFinder.h  CalibrationRenderHelpers.cpp  CalibrationRenderHelpers.h  CameraTrackerOffsetCalibrator.cpp  CameraTrackerOffsetCalibrator.h  DepthMeshGenerator.cpp  DepthMeshGenerator.h  FastenerCalibrator.cpp  FastenerCalibrator.h  MathFastener.cpp  MathFastener.h  MathOpenCV.h  MonoLensDepthMeshCapture.cpp  MonoLensDepthMeshCapture.h  MonoLensDistortionCalibrator.cpp  MonoLensDistortionCalibrator.h  MonoLensTrackerPoseCalibrator.cpp  MonoLensTrackerPoseCalibrator.h  StencilAligner.cpp  StencilAligner.h  SyntheticDepthEstimator.cpp  SyntheticDepthEstimator.h  VideoDisplayConstants.cpp  VideoDisplayConstants.h  VideoFrameDistortionView.cpp  VideoFrameDistortionView.h
src/Client/: CMakeLists.txt  MikanClient.cpp  MikanClient.h  MikanClientTypes.h  MikanClient_CAPI.cpp  MikanClient_CAPI.h  MikanClient_export.h  MikanConstants.h  MikanMathTypes.h  RefurekuSettings.toml
src/ClientAPI/: CMakeLists.txt  RefurekuSettings.toml
src/ClientCodeGen/: CMakeLists.txt  CSharpCodeGenConfig.json  ClientCodeGen.cpp
src/ClientCore/: CMakeLists.txt
src/Components/: AnchorComponent.cpp  AnchorComponent.h  BoxColliderComponent.cpp  BoxColliderComponent.h  BoxStencilComponent.cpp  BoxStencilComponent.h  ColliderComponent.cpp  ColliderComponent.h  ColliderQuery.h  ComponentFwd.h  ComponentProperty.cpp  ComponentProperty.h  DiskColliderComponent.cpp  DiskColliderComponent.h  FastenerComponent.cpp  FastenerComponent.h  FunctionInterface.h  GizmoRotateComponent.cpp  GizmoRotateComponent.h  GizmoScaleComponent.cpp  GizmoScaleComponent.h  GizmoTransformComponent.cpp  GizmoTransformComponent.h  GizmoTranslateComponent.cpp  GizmoTranslateComponent.h  MeshColliderComponent.cpp  MeshColliderComponent.h  MikanAnchorComponent.cpp  MikanAnchorComponent.h  MikanBoxColliderComponent.cpp  MikanBoxColliderComponent.h  MikanColliderComponent.cpp  MikanColliderComponent.h  MikanComponent.cpp  MikanComponent.h  MikanMeshColliderComponent.cpp  MikanMeshColliderComponent.h  MikanStaticMeshComponent.cpp  MikanStaticMeshComponent.h  MikanStencilComponent.cpp  (+16 more)
src/Config/: CommonConfig.cpp  CommonConfig.h  CommonConfigFwd.h
src/Editor/: CMakeLists.txt  winapp_resources.rc
src/Interprocess/: BoostInterprocessMessageClient.cpp  BoostInterprocessMessageClient.h  BoostInterprocessMessageServer.cpp  BoostInterprocessMessageServer.h  InterprocessMessages.cpp  InterprocessMessages.h  InterprocessRenderTargetReader.cpp  InterprocessRenderTargetReader.h  InterprocessRenderTargetShared.cpp  InterprocessRenderTargetShared.h  InterprocessRenderTargetWriter.cpp  InterprocessRenderTargetWriter.h  WebsocketInterprocessMessageClient.cpp  WebsocketInterprocessMessageClient.h  WebsocketInterprocessMessageServer.cpp  WebsocketInterprocessMessageServer.h
src/Libraries/: CMakeLists.txt
src/Localization/: LocalizationManager.cpp  LocalizationManager.h
src/Math/: MathGLM.cpp  MathGLM.h  MathMikan.cpp  MathTypeConversion.cpp  MathTypeConversion.h  MathUtility.cpp  MathUtility.h  Transform.cpp  Transform.h
src/MikanCoreApp/: CMakeLists.txt
src/MikanUtility/: CMakeLists.txt
src/NodeEditors/: EditorNode.h  EditorNodeConstants.h  EditorNodeFwd.h  EditorNodeUtil.h  EditorPin.cpp  EditorPin.h  NodeEditorFwd.h  NodeEditorState.h  NodeEditorUI.cpp  NodeEditorUI.h  NodeEditorWindow.cpp  NodeEditorWindow.h  NodeFwd.h
src/Object/: MikanComponent.h  MikanObject.cpp  MikanObject.h  MikanObjectSystem.cpp  MikanObjectSystem.h  MikanSceneComponent.cpp  MikanSceneComponent.h
src/OpenCV/: DeepNeuralNetwork.cpp  DeepNeuralNetwork.h  MathOpenCV.cpp  OpenCVFwd.h  OpenCVManager.cpp  OpenCVManager.h
src/Plugins/: CMakeLists.txt
src/Programs/: CMakeLists.txt
src/Renderer/: EditorNode.cpp  EditorNodeUtil.cpp  FontManager.cpp  FontManager.h  FrameCompositorConstants.cpp  FrameCompositorConstants.h  GlBakedTextCache.cpp  GlBakedTextCache.h  GlBufferBlock.cpp  GlBufferBlock.h  (+72 more)
(+1335 files in other folders)
